
    2.17.6: In progress...

       NEW: Fetch RDS Program Service & RadioText via remote control.
  IMPROVED: Save I/Q recording format to settings.
  IMPROVED: Reduced CPU utilization of plot and waterfall display.
  IMPROVED: Display and formatting of RDS data.
     FIXED: Decoding of RDS flags.
   CHANGED: DMG release requires macOS 13.7 or later.


    2.17.5: Released April 18, 2024

       NEW: PlutoSDR and LimeSDR support in AppImage release, via SoapySDR.
       NEW: Airspy support in Windows binary release.
  IMPROVED: Updated GNU Radio, SDR driver, and Qt versions in AppImage release.
     FIXED: Respond correctly to pipelined remote control commands.
     FIXED: Limit UDP packet size to 1024, for compatibility with netcat.
   REMOVED: FreeSRP support in AppImage release.


    2.17.4: Released February 9, 2024

       NEW: Experimental Windows binary release (RTL-SDR only).
  IMPROVED: Respond to \chk_vfo remote command (needed by some clients).
  IMPROVED: Respond to \get_powerstat remote command (needed by some clients).


    2.17.3: Released October 20, 2023

     FIXED: Delete key shortcut for bookmark removal.


    2.17.2: Released October 9, 2023

       NEW: FORCE_QT6 and FORCE_QT5 CMake options to force Qt version.


    2.17.1: Released October 9, 2023

       NEW: Delete key clears the waterfall.
       NEW: I/Q tool can save recordings in SigMF format.
       NEW: Holding Ctrl speeds up mouse wheel zoom.
  IMPROVED: Reduced CPU utilization of waterfall display.
   CHANGED: DMG release requires macOS 12.7 or later.


      2.17: Released October 1, 2023

       NEW: "Avg" plot mode, which displays average of FFT bins.
       NEW: "Fill" plot mode, which displays both maximum & average of FFT bins.
       NEW: "Histogram" plot mode, which displays distribution of FFT bins.
       NEW: Selectable plot scaling: dBFS, dBV/RBW, dbV/√Hz, dBm/RBW, dBm/Hz.
       NEW: Min hold line in plot.
       NEW: A/B measurement markers on plot.