@@ -2,11 +2,12 @@
     2.17.6: In progress...
 
        NEW: Fetch RDS Program Service & RadioText via remote control.
+       NEW: DMG release for ARM-based Macs.
   IMPROVED: Save I/Q recording format to settings.
   IMPROVED: Reduced CPU utilization of plot and waterfall display.
   IMPROVED: Display and formatting of RDS data.
      FIXED: Decoding of RDS flags.
-   CHANGED: DMG release requires macOS 13.7 or later.
+   CHANGED: x86 DMG release requires macOS 13.7 or later.
 
 
     2.17.5: Released April 18, 2024
